--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   },
   "default_locale": "en",
   "background": {
-    "scripts": ["js/background.js"],
+    "page": "background.html",
     "persistent": false
   },
   "permissions": ["activeTab", "tabs", "storage", "downloads", "notifications", "declarativeContent", "contextMenus", "cookies", "http://*/*", "https://*/*"],
@@ -31,5 +31,25 @@
     "default_title": "Sitecore Author Toolbox (options)",
     "default_icon": "images/icon.png"
   },
-  "web_accessible_resources": ["images/*", "css/*", "js/*", "audio/*", "options/*", "data/icons.json"]
+  "web_accessible_resources": ["images/*", "css/*", "js/*", "audio/*", "options/*", "data/icons.json"],
+  "commands": {
+    "editInExperienceEditor": {
+      "suggested_key": {
+        "default": "Alt+X"
+      },
+      "description": "Edit In Experience Editor"
+    },
+    "viewInPreview": {
+      "suggested_key": {
+        "default": "Alt+P"
+      },
+      "description": "View In Preview"
+    },
+    "editInContentEditor": {
+      "suggested_key": {
+        "default": "Alt+C"
+      },
+      "description": "Edit In Content Editor"
+    }
+  }
 }
